fixed an alignment

--- a/styles/resturantindex.css
+++ b/styles/resturantindex.css
@@ -12,6 +12,9 @@ nav{
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: "Faculty Glyphic", sans-serif;
+    font-weight: 400;
+    font-style: normal;   
 }
 
 nav img{
@@ -74,6 +77,7 @@ nav img{
     justify-content: center;
     align-content: center;
 }
+
 
 .wood div{
     box-sizing: border-box;
@@ -144,6 +148,7 @@ main{
     align-content: inherit;
     justify-content: inherit;
     width: 100%;
+    height: 3em;
 }
 
 #mainmenu p{
@@ -167,15 +172,16 @@ main{
     height: 140%;
 }
 
-#mainarticle{
+.mainarticle{
     display: flex;
     order: row;
-    margin: 15px 20px;
 }
 
-#mainarticle img{
+.mainarticle img{
     height: 25em;
+    margin-top: 5px;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
 .orderselection{
@@ -210,5 +216,21 @@ main{
 
 .orderselection > p {
     margin: 15px auto;
+}
+
+
+.menubutton{
+    background-color: inherit;
+    border: 0;
+    height: 100%;
+    color: white;
+}
+
+#steak{
+    display: flex;
+}
+
+#specials{
+    display: none;
 }
 
